--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-02QF1S4TML"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2EYYY6Z9M"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-      gtag('config', 'G-02QF1S4TML');
+      gtag('config', 'G-W2EYYY6Z9M');
     </script>
 
     <meta charset="UTF-8" />
